--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
+    "react-native-fontawesome": "^5.7.0",
+    "react-native-image-slider": "^1.1.5",
+    "react-native-phone-call": "^1.0.4",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19",
-    "react-router-native": "^4.2.0"
+    "react-redux": "^5.0.6",
+    "react-router-native": "^4.2.0",
+    "redux": "^3.7.2"
   }
 }
