--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
+    "react-native-communications": "^2.2.1",
     "react-native-fontawesome": "^5.7.0",
     "react-native-image-slider": "^1.1.5",
     "react-native-phone-call": "^1.0.4",
+    "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.6",
